🐳 Chore(Devops): Add sonarqube properties and fix code smells

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=jenkins-exporter
 sonar.projectName=jenkins-exporter
-sonar.exclusions=venv/**
+sonar.exclusions=venv/**, .idea/**, .git/**
+sonar.python.version=3.9
